# vulkan-engine

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  Makefile
app/: CMakeLists.txt  main.cpp
cmake/: CompileShaders.cmake  FindSteamAudio.cmake
engine/: CMakeLists.txt
engine/include/engine/core/: audio.hpp  camera.hpp  log.hpp  macos_fullscreen.hpp  spatial_audio.hpp  window.hpp
engine/include/engine/ecs/: components.hpp  registry.hpp
engine/include/engine/renderer/: gpu_profiler.hpp  mesh.hpp  render_graph.hpp  renderer.hpp  scene.hpp  vk_buffer.hpp  vk_descriptors.hpp  vk_device.hpp  vk_instance.hpp  vk_pipeline.hpp  vk_swapchain.hpp  vk_texture.hpp
engine/include/engine/renderer/passes/: blit_pass.hpp  bloom_blur_pass.hpp  bloom_composite_pass.hpp  bloom_extract_pass.hpp  scene_pass.hpp  shadow_pass.hpp  ui_pass.hpp
engine/src/core/: audio.cpp  camera.cpp  macos_fullscreen.mm  spatial_audio.cpp  window.cpp
engine/src/renderer/: gpu_profiler.cpp  mesh.cpp  render_graph.cpp  renderer.cpp  scene.cpp  vk_buffer.cpp  vk_descriptors.cpp  vk_device.cpp  vk_instance.cpp  vk_pipeline.cpp  vk_swapchain.cpp  vk_texture.cpp
engine/src/renderer/passes/: render_passes.cpp
shaders/: CMakeLists.txt  bloom_blur.frag  bloom_composite.frag  bloom_extract.frag  debug_line.vert  fullscreen.vert  shadow.vert  skybox.frag  skybox.vert  triangle.frag  triangle.vert  volumetric.frag  volumetric.vert
